# oracle-hackathon

./: .env.example  .gitignore  README.md  oracleprd.txt  pyproject.toml  targets.json
scrapers/: ebay_stealth.py  jp_source.py
src/: config.py  detective.py  forensic_eye.py  main.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css  theme.ts
ui/src/components/: AnalysisCenter.tsx  Header.tsx  ImageCard.tsx  LegitimacyReport.tsx  ScanProgress.tsx  VerdictPanel.tsx
ui/src/lib/: api.ts
