[project]
name = "visual-oracle"
version = "0.1.0"
description = "Visual Oracle — Ghost listing detector for TCG collectibles"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "google-genai>=1.0.0",
    "stagehand>=0.1.0",
    "browserbase>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scrapers"]
